Added Java implementation.

--- a/fibs/FibsPresentation.tex
+++ b/fibs/FibsPresentation.tex
@@ -1,5 +1,6 @@
 \documentclass{beamer}
 
+\usepackage{listings}
 \usepackage{graphicx}
 \usepackage{mathtools}
 
@@ -8,9 +9,31 @@
     \subtitle{An in-depth examination of the Fibonacci sequence.}
     \author{Andrew Rademacher}
 
+    \definecolor{dkgreen}{rgb}{0,0.6,0}
+    \definecolor{gray}{rgb}{0.5,0.5,0.5}
+    \definecolor{mauve}{rgb}{0.58,0,0.82}
 
+    \lstset{frame=tb,
+        language=Java,
+        aboveskip=3mm,
+        belowskip=3mm,
+        showstringspaces=false,
+        columns=flexible,
+        basicstyle={\small\ttfamily},
+        numbers=none,
+        numberstyle=\tiny\color{gray},
+        keywordstyle=\color{blue},
+        commentstyle=\color{dkgreen},
+        stringstyle=\color{mauve},
+        breaklines=true,
+        breakatwhitespace=true
+        tabsize=3
+    }
+
+% FRAME:TITLE
     \frame{\titlepage}
 
+% FRAME:FIBONACCI
     \begin{frame}
         \frametitle{The Fibonacci Sequence}
 
@@ -44,5 +67,22 @@
                 \end{figure}
             \end{column}
         \end{columns}
+    \end{frame}
+
+% FRAME:JAVA
+    \begin{frame}[fragile=singleslide]
+        \frametitle{Traditional Java Implementation}
+        
+        \begin{lstlisting}
+        public static BigInteger[] getFibs(int n) {
+            BigInteger[] fibs = new BigInteger[n + 1];
+            fibs[0] = BigInteger.valueOf(1);
+            fibs[1] = BigInteger.valueOf(1);
+            for (int i = 2; i <= n; i++)
+                fibs[i] = fibs[i - 1].add(fibs[i - 2]);
+
+            return fibs;
+        }
+        \end{lstlisting}
     \end{frame}
 \end{document}
