--- a/fibs/FibsPresentation.tex
+++ b/fibs/FibsPresentation.tex
@@ -3,6 +3,9 @@
 \usepackage{listings}
 \usepackage{graphicx}
 \usepackage{mathtools}
+\usepackage{tikz}
+
+\usetikzlibrary{matrix,chains,scopes,fit}
 
 \begin{document}
     \title{Demystifying Haskell}
@@ -116,6 +119,51 @@
             return fibs;
         }
         \end{lstlisting}
+    \end{frame}
+
+% FRAME:PROCESS
+    \begin{frame}[fragile=singleslide]
+        \frametitle{Imperative Process}
+
+        \sffamily\begin{tikzpicture}
+            \matrix (m) [
+                matrix of nodes,
+                column sep=5mm,
+                row sep=1cm,
+                nodes={
+                    draw,
+                    line width=1pt,
+                    anchor=center,
+                    text centered,
+                    rounded corners,
+                    minimum width=1.5cm, minimum height=8mm
+                },
+                nodes in empty cells
+            ] {
+                Define N \\
+                Allocate array of size N \\
+                Populate array[0] as 1 \\
+                Populate array[1] as 1 \\
+                Define I as 2 \\
+                If I <= N   &   Populate array[I] as array[I-1] + array[I-2]    &   Set I as I + 1 \\
+                Return array \\
+            };
+
+            { [start chain,every on chain/.style={join}, every join/.style={line width=1pt}]
+                \chainin (m-1-1);
+                \chainin (m-2-1);
+                \chainin (m-3-1);
+                \chainin (m-4-1);
+                \chainin (m-5-1);
+                \chainin (m-6-1);
+                \chainin (m-7-1);
+            };
+
+            \tikzset{blue dotted/.style={draw=blue!50!white, line width=1pt,
+                                         dash pattern=on 1pt off 4pt on 6pt off 4pt,
+                                         inner sep=4mm, rectangle, rounded corners}};
+
+        \end{tikzpicture}
     \end{frame}
 
 % FRAME:HASKELL
