--- a/fibs/FibsPresentation.tex
+++ b/fibs/FibsPresentation.tex
@@ -127,7 +127,7 @@
         \begin{lstlisting}
         function getFibs (n) {
             var fibs = [1, 1];
-            for (var i = 2; i <= n; i++) 
+            for (var i = 2; i < n; i++) 
                 fibs.push(fibs[fibs.length - 1] + fibs[fibs.length - 2]);
 
             return fibs;
@@ -142,10 +142,10 @@
         
         \begin{lstlisting}
         public static BigInteger[] getFibs(int n) {
-            BigInteger[] fibs = new BigInteger[n + 1];
+            BigInteger[] fibs = new BigInteger[n];
             fibs[0] = BigInteger.valueOf(1);
             fibs[1] = BigInteger.valueOf(1);
-            for (int i = 2; i <= n; i++)
+            for (int i = 2; i < n; i++)
                 fibs[i] = fibs[i - 1].add(fibs[i - 2]);
 
             return fibs;
@@ -165,7 +165,7 @@
                 \node[punktchain, join] (pop1) {Populate array[1] as 1};
                 \node[punktchain, join] (defineI) {Define I as 2};
                 
-                \node[punktchain, join] (if) {If I less than or equal to N};
+                \node[punktchain, join] (if) {If I less than N};
                 \begin{scope}[start branch=venstre, every join/.style={->, thick, shorten <=1pt}]
                     \node[punktchain, on chain=going right, join=by {->}] 
                         (popI) {Populate array[I] as (array[I-1] + array[I-2])};
