Added tuple frame.

--- a/fibs/FibsPresentation.tex
+++ b/fibs/FibsPresentation.tex
@@ -378,4 +378,31 @@ listD = 0 : listC                   // Insert
             \end{column}
         \end{columns}
     \end{frame}
+
+% FRAME:TUPLES
+    \begin{frame}[fragile=singleslide]
+        \frametitle{Tuples}
+
+        \begin{columns}[c]
+            \begin{column}[T]{5cm}
+                \begin{itemize}
+                    \item Tuples are atomic (like an int or boolean).
+                    \item Tuples are heterogeneous.
+                    \item Tuples are immutable.
+                    \item Tuples allow random access.
+                    \item Tuples are usually small (less than 4 elements).
+                \end{itemize}
+            \end{column}
+            \begin{column}[T]{5cm}
+                \begin{lstlisting}
+coord  = 
+    (23.235, -345.345)
+name   = 
+    ("John", "Edward", "Doe")
+person = 
+    ("Jane Doe", 24, Female)
+                \end{lstlisting}
+            \end{column}
+        \end{columns}
+    \end{frame}
 \end{document}
