Added complex tuple to tuple frame.

--- a/fibs/FibsPresentation.tex
+++ b/fibs/FibsPresentation.tex
@@ -401,6 +401,8 @@ name   =
     ("John", "Edward", "Doe")
 person = 
     ("Jane Doe", 24, Female)
+complex =
+    ("SGF", [2,3,4], [2.3,2.5])
                 \end{lstlisting}
             \end{column}
         \end{columns}
